--- a/environment.yml
+++ b/environment.yml
@@ -8,5 +8,5 @@ dependencies:
   - pip:
     - gym==0.15.4
     - procgen==0.9.2
-    - tensorflow==1.15.0
+    - tensorflow-gpu==1.15.0
     - pytest # for baselines
