--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,7 @@
+name: procgen
+
 channels:
+  - defaults
   - conda-forge
 
 dependencies:
@@ -6,7 +9,4 @@ dependencies:
   - mpi4py=3.0.3
   - pip
   - pip:
-    - gym==0.15.4
-    - procgen==0.9.2
-    - tensorflow-gpu==1.15.0
-    - pytest # for baselines
+    - -r ./requirements.txt
